force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <label>Immobilie</label>
    <nameField>
        <label>Immobilien Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Immobilien</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>