force-app/main/default/objects/Property__c/fields/AbBeantragt__c.field-meta.xml
<CustomField>
    <fullName>AbBeantragt__c</fullName>
    <label>Ab beantragt</label>
    <type>Date</type>
</CustomField>