force-app/main/default/objects/Property__c/fields/AbErhalten__c.field-meta.xml
<CustomField>
    <fullName>AbErhalten__c</fullName>
    <label>Ab erhalten</label>
    <type>Date</type>
</CustomField>