force-app/main/default/objects/Property__c/fields/AbgerechneteEinmalzahlungen__c.field-meta.xml
<CustomField>
    <fullName>AbgerechneteEinmalzahlungen__c</fullName>
    <label>Abgerechnete Einmalzahlungen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>