force-app/main/default/objects/Property__c/fields/AbgerechneterBetrag__c.field-meta.xml
<CustomField>
    <fullName>AbgerechneterBetrag__c</fullName>
    <formula>IF(!ISBLANK(MaBVAbgerechnet__c), MaBVAbgerechnet__c, 0) + IF(!ISBLANK(AbgerechneteEinmalzahlungen__c),AbgerechneteEinmalzahlungen__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abgerechneter Betrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>