force-app/main/default/objects/Property__c/fields/AbnahmeKundeAm__c.field-meta.xml
<CustomField>
    <fullName>AbnahmeKundeAm__c</fullName>
    <label>Abnahme Kunde am</label>
    <type>Date</type>
</CustomField>