force-app/main/default/objects/Property__c/fields/AbschlussMietvertrag__c.field-meta.xml
<CustomField>
    <fullName>AbschlussMietvertrag__c</fullName>
    <label>Abschluss Mietvertrag</label>
    <type>Date</type>
</CustomField>