force-app/main/default/objects/Property__c/fields/Abschreibungswert__c.field-meta.xml
<CustomField>
    <fullName>Abschreibungswert__c</fullName>
    <label>Abschreibungswert</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>