force-app/main/default/objects/Property__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Aktion</label>
    <type>TextArea</type>
</CustomField>