force-app/main/default/objects/Property__c/fields/ActionUntil__c.field-meta.xml
<CustomField>
    <fullName>ActionUntil__c</fullName>
    <label>Aktion bis</label>
    <type>Date</type>
</CustomField>