force-app/main/default/objects/Property__c/fields/Additional_Costs__c.field-meta.xml
<CustomField>
    <fullName>Additional_Costs__c</fullName>
    <formula>Real_Estate_Transfer_Tax_1__c + Notary_And_Court_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>