force-app/main/default/objects/Property__c/fields/Administrator_Cost_Increase_After_Years__c.field-meta.xml
<CustomField>
    <fullName>Administrator_Cost_Increase_After_Years__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Administrator Cost Increase After Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>