force-app/main/default/objects/Property__c/fields/AehnlicheObjekteIds__c.field-meta.xml
<CustomField>
    <fullName>AehnlicheObjekteIds__c</fullName>
    <label>Ähnliche Objekte Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>