force-app/main/default/objects/Property__c/fields/AFA_Art__c.field-meta.xml
<CustomField>
    <fullName>AFA_Art__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AFA Art</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>