force-app/main/default/objects/Property__c/fields/Afa_Beginning__c.field-meta.xml
<CustomField>
    <fullName>Afa_Beginning__c</fullName>
    <label>Afa Beginning</label>
    <type>Date</type>
</CustomField>