force-app/main/default/objects/Property__c/fields/Afa_Building_Shares__c.field-meta.xml
<CustomField>
    <fullName>Afa_Building_Shares__c</fullName>
    <defaultValue>0.02</defaultValue>
    <label>Afa Building Shares</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>