force-app/main/default/objects/Property__c/fields/AFA_Einrichtung__c.field-meta.xml
<CustomField>
    <fullName>AFA_Einrichtung__c</fullName>
    <label>AFA Einrichtung €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>