force-app/main/default/objects/Property__c/fields/Afa_Facility__c.field-meta.xml
<CustomField>
    <fullName>Afa_Facility__c</fullName>
    <defaultValue>0.0667</defaultValue>
    <label>Afa Facility</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>