force-app/main/default/objects/Property__c/fields/Afa_Moblierung__c.field-meta.xml
<CustomField>
    <fullName>Afa_Moblierung__c</fullName>
    <description>% Abschreibung des Möblierungkonzeptes</description>
    <label>Afa Moblierung</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>