force-app/main/default/objects/Property__c/fields/Afa_Outdoor__c.field-meta.xml
<CustomField>
    <fullName>Afa_Outdoor__c</fullName>
    <defaultValue>0.0667</defaultValue>
    <label>Afa Outdoor</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>