force-app/main/default/objects/Property__c/fields/Afa_Plot__c.field-meta.xml
<CustomField>
    <fullName>Afa_Plot__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Afa Plot</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>