force-app/main/default/objects/Property__c/fields/AFAAnschaffungskosten__c.field-meta.xml
<CustomField>
    <fullName>AFAAnschaffungskosten__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AFA Anschaffungskosten</label>
    <referenceTo>AFA__c</referenceTo>
    <relationshipLabel>Immobilien</relationshipLabel>
    <relationshipName>ImmobilienAfa</relationshipName>
    <type>Lookup</type>
</CustomField>