force-app/main/default/objects/Property__c/fields/AktenstatusDms__c.field-meta.xml
<CustomField>
    <fullName>AktenstatusDms__c</fullName>
    <label>Aktenstatus DMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Immobilie angelegt</fullName>
            </value>
            <value>
                <fullName>Entwicklung (Akquise)</fullName>
                <default>true</default>
                <label>Entwicklung (Akquise)</label>
            </value>
            <value>
                <fullName>Entwicklung (Aktiv)</fullName>
            </value>
            <value>
                <fullName>Entwicklung (Abgelehnt)</fullName>
            </value>
            <value>
                <fullName>Durchführung (Aktiv)</fullName>
            </value>
            <value>
                <fullName>Abwicklung (Aktiv)</fullName>
            </value>
            <value>
                <fullName>Durchführung (Abgeschlossen)</fullName>
            </value>
            <value>
                <fullName>Asset Management (Aktiv)</fullName>
            </value>
            <value>
                <fullName>Archiviert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>