force-app/main/default/objects/Property__c/fields/AktuelleMabvRate__c.field-meta.xml
<CustomField>
    <fullName>AktuelleMabvRate__c</fullName>
    <label>Aktuelle MaBV Rate</label>
    <summaryForeignKey>MaBVRate__c.Immobilie__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>