force-app/main/default/objects/Property__c/fields/AktuelleMaBVRateLookup__c.field-meta.xml
<CustomField>
    <fullName>AktuelleMaBVRateLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aktuelle Rate</label>
    <referenceTo>MaBVRate__c</referenceTo>
    <relationshipLabel>Immobilien</relationshipLabel>
    <relationshipName>Immobilien</relationshipName>
    <type>Lookup</type>
</CustomField>