force-app/main/default/objects/Property__c/fields/All_Teilobjekts_Price_Summary__c.field-meta.xml
<CustomField>
    <fullName>All_Teilobjekts_Price_Summary__c</fullName>
    <label>All Teilobjekts Price Summary</label>
    <summarizedField>Appartment__c.Purchase_Price__c</summarizedField>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>