force-app/main/default/objects/Property__c/fields/AllgemeineAnmerkungenZumKaufvertrag__c.field-meta.xml
<CustomField>
    <fullName>AllgemeineAnmerkungenZumKaufvertrag__c</fullName>
    <label>allgemeine Anmerkungen zum Kaufvertrag</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>