force-app/main/default/objects/Property__c/fields/AllgemeineAnmerkungenZumMietvertrag__c.field-meta.xml
<CustomField>
    <fullName>AllgemeineAnmerkungenZumMietvertrag__c</fullName>
    <label>Allgemeine Anmerkungen zum Mietvertrag</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>