force-app/main/default/objects/Property__c/fields/AllgemeineAnmerkungenZumObjekt__c.field-meta.xml
<CustomField>
    <fullName>AllgemeineAnmerkungenZumObjekt__c</fullName>
    <label>allgemeine Anmerkungen zum Objekt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>