force-app/main/default/objects/Property__c/fields/AlterDesKundenBis__c.field-meta.xml
<CustomField>
    <fullName>AlterDesKundenBis__c</fullName>
    <label>Alter des Kunden bis</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>