force-app/main/default/objects/Property__c/fields/AlterDesKundenVon__c.field-meta.xml
<CustomField>
    <fullName>AlterDesKundenVon__c</fullName>
    <label>Alter des Kunden von</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>