force-app/main/default/objects/Property__c/fields/AlternativeAFAAnschaffungskosten__c.field-meta.xml
<CustomField>
    <fullName>AlternativeAFAAnschaffungskosten__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternative AFA Anschaffungskosten</label>
    <referenceTo>AFA__c</referenceTo>
    <relationshipLabel>Immobilien (Alternative AFA Anschaffungskosten)</relationshipLabel>
    <relationshipName>ImmobilienAFAAlternativ</relationshipName>
    <type>Lookup</type>
</CustomField>