force-app/main/default/objects/Property__c/fields/AmblPflegeMieteProMMonat__c.field-meta.xml
<CustomField>
    <fullName>AmblPflegeMieteProMMonat__c</fullName>
    <label>Ambl. Pflege (Miete pro m²/Monat)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>