force-app/main/default/objects/Property__c/fields/Amtsgericht__c.field-meta.xml
<CustomField>
    <fullName>Amtsgericht__c</fullName>
    <label>Amtsgericht</label>
    <length>255</length>
    <type>Text</type>
</CustomField>