force-app/main/default/objects/Property__c/fields/Ancillary_Costs_Rate__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Costs_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nebenkosten Einnahmenin % von Mieteinnahmen</description>
    <label>Ancillary Costs Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>