force-app/main/default/objects/Property__c/fields/Ankaufsart__c.field-meta.xml
<CustomField>
    <fullName>Ankaufsart__c</fullName>
    <label>Ankaufsart</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Deal</fullName>
            </value>
            <value>
                <fullName>Vertriebsprojekt</fullName>
            </value>
            <value>
                <fullName>Share Deal</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>