force-app/main/default/objects/Property__c/fields/AnkaufsvereinbarungAb__c.field-meta.xml
<CustomField>
    <fullName>AnkaufsvereinbarungAb__c</fullName>
    <label>Ankaufsvereinbarung ab</label>
    <type>Date</type>
</CustomField>