force-app/main/default/objects/Property__c/fields/Anzahl_Doppelzimmer__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_Doppelzimmer__c</fullName>
    <label>Anzahl Doppelzimmer</label>
    <summaryFilterItems>
        <field>Appartment__c.Zimmerart__c</field>
        <operation>equals</operation>
        <value>Doppelzimmer</value>
    </summaryFilterItems>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>