force-app/main/default/objects/Property__c/fields/Anzahl_Einheiten__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_Einheiten__c</fullName>
    <label>Anzahl Einheiten</label>
    <summaryFilterItems>
        <field>Appartment__c.ExternNichtAnzeigen__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>