force-app/main/default/objects/Property__c/fields/Anzahl_Einzelzimmer__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_Einzelzimmer__c</fullName>
    <label>Anzahl Einzelzimmer</label>
    <summaryFilterItems>
        <field>Appartment__c.Zimmerart__c</field>
        <operation>equals</operation>
        <value>Einzelzimmer</value>
    </summaryFilterItems>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>