force-app/main/default/objects/Property__c/fields/AnzahlKaufpreisFaellig__c.field-meta.xml
<CustomField>
    <fullName>AnzahlKaufpreisFaellig__c</fullName>
    <label>Anzahl Kaufpreis fällig</label>
    <summaryFilterItems>
        <field>Appartment__c.KaufpreisFaellig__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>