force-app/main/default/objects/Property__c/fields/AnzahlNurReservierungen__c.field-meta.xml
<CustomField>
    <fullName>AnzahlNurReservierungen__c</fullName>
    <label>Anzahl nur Reservierungen</label>
    <summaryFilterItems>
        <field>Appartment__c.Status__c</field>
        <operation>equals</operation>
        <value>Reservierungsvorbereitung, Reservierung angefragt, Reserviert</value>
    </summaryFilterItems>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>