force-app/main/default/objects/Property__c/fields/AnzahlReservierungenOhneKontingent__c.field-meta.xml
<CustomField>
    <fullName>AnzahlReservierungenOhneKontingent__c</fullName>
    <label>Anzahl Reservierungen ohne Kontingent</label>
    <summaryFilterItems>
        <field>Appartment__c.Status__c</field>
        <operation>equals</operation>
        <value>Reservierungsvorbereitung, Reservierung angefragt, Reserviert, Kaufvertragsangebot abgegeben, KV wird fremd abgegeben, Kaufvertragsunterlagen verschickt -zweiseitig-, Auftrag zur Beurkundung vorhanden</value>
    </summaryFilterItems>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>