force-app/main/default/objects/Property__c/fields/AnzahlStellplaetze__c.field-meta.xml
<CustomField>
    <fullName>AnzahlStellplaetze__c</fullName>
    <label>Anzahl Stellplätze</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>