force-app/main/default/objects/Property__c/fields/AnzahlVerkaufbarerEinheiten__c.field-meta.xml
<CustomField>
    <fullName>AnzahlVerkaufbarerEinheiten__c</fullName>
    <label>Anzahl verkaufbarer Einheiten</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>