force-app/main/default/objects/Property__c/fields/AnzahlZimmerStationaeePflege__c.field-meta.xml
<CustomField>
    <fullName>AnzahlZimmerStationaeePflege__c</fullName>
    <label>Anzahl Zimmer stationäre Pflege</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>