force-app/main/default/objects/Property__c/fields/Appreciation_After_Years__c.field-meta.xml
<CustomField>
    <fullName>Appreciation_After_Years__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Appreciation After Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>