force-app/main/default/objects/Property__c/fields/Art_der_Teilobjekte__c.field-meta.xml
<CustomField>
    <fullName>Art_der_Teilobjekte__c</fullName>
    <label>Art der Teilobjekte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appartements</fullName>
                <default>true</default>
                <label>Apartments</label>
            </value>
            <value>
                <fullName>Wohnungen</fullName>
            </value>
            <value>
                <fullName>Häuser</fullName>
            </value>
            <value>
                <fullName>Ferienwohnungen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>