force-app/main/default/objects/Property__c/fields/Aufmass__c.field-meta.xml
<CustomField>
    <fullName>Aufmass__c</fullName>
    <label>Aufmaß</label>
    <type>Date</type>
</CustomField>