force-app/main/default/objects/Property__c/fields/AufschiebendeBedingungRuecktrittrecht__c.field-meta.xml
<CustomField>
    <fullName>AufschiebendeBedingungRuecktrittrecht__c</fullName>
    <label>Aufschiebende Bedingung/Rücktrittrechte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>