force-app/main/default/objects/Property__c/fields/AuswertungFibu__c.field-meta.xml
<CustomField>
    <fullName>AuswertungFibu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auswertung Fibu</label>
    <type>Checkbox</type>
</CustomField>