force-app/main/default/objects/Property__c/fields/AuswertungRechtUndUFI__c.field-meta.xml
<CustomField>
    <fullName>AuswertungRechtUndUFI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auswertung Recht und UFI</label>
    <type>Checkbox</type>
</CustomField>