force-app/main/default/objects/Property__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <length>55</length>
    <type>Text</type>
</CustomField>