force-app/main/default/objects/Property__c/fields/Bauart__c.field-meta.xml
<CustomField>
    <fullName>Bauart__c</fullName>
    <label>Bauart</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neubau</fullName>
            </value>
            <value>
                <fullName>Bestand</fullName>
            </value>
            <value>
                <fullName>Sonstige</fullName>
            </value>
            <value>
                <fullName>Vertrieb</fullName>
            </value>
            <value>
                <fullName>Ersatzbau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>