force-app/main/default/objects/Property__c/fields/BaugenehmigungBeantragtAm__c.field-meta.xml
<CustomField>
    <fullName>BaugenehmigungBeantragtAm__c</fullName>
    <label>Baugenehmigung beantragt am</label>
    <type>Date</type>
</CustomField>