force-app/main/default/objects/Property__c/fields/BaugenehmigungNotizen__c.field-meta.xml
<CustomField>
    <fullName>BaugenehmigungNotizen__c</fullName>
    <label>Baugenehmigung Notizen</label>
    <type>TextArea</type>
</CustomField>