force-app/main/default/objects/Property__c/fields/BaugenehmigungVorhandenSeit__c.field-meta.xml
<CustomField>
    <fullName>BaugenehmigungVorhandenSeit__c</fullName>
    <label>Baugenehmigung vorhanden seit</label>
    <type>Date</type>
</CustomField>