force-app/main/default/objects/Property__c/fields/Baukosten__c.field-meta.xml
<CustomField>
    <fullName>Baukosten__c</fullName>
    <label>Baukosten</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>