force-app/main/default/objects/Property__c/fields/Baunebenkosten__c.field-meta.xml
<CustomField>
    <fullName>Baunebenkosten__c</fullName>
    <label>Baunebenkosten</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>