force-app/main/default/objects/Property__c/fields/Baurecht__c.field-meta.xml
<CustomField>
    <fullName>Baurecht__c</fullName>
    <label>Baurecht</label>
    <length>255</length>
    <type>Text</type>
</CustomField>