force-app/main/default/objects/Property__c/fields/Bauvorbescheid__c.field-meta.xml
<CustomField>
    <fullName>Bauvorbescheid__c</fullName>
    <label>Bauvorbescheid</label>
    <type>Date</type>
</CustomField>