force-app/main/default/objects/Property__c/fields/BemerkungenControlling__c.field-meta.xml
<CustomField>
    <fullName>BemerkungenControlling__c</fullName>
    <label>Bemerkungen Controlling</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>