force-app/main/default/objects/Property__c/fields/Betreiber__c.field-meta.xml
<CustomField>
    <fullName>Betreiber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aktueller Betreiber</label>
    <referenceTo>Betreiber__c</referenceTo>
    <relationshipLabel>Immobilien</relationshipLabel>
    <relationshipName>Betreiber</relationshipName>
    <type>Lookup</type>
</CustomField>