force-app/main/default/objects/Property__c/fields/Betreiberinformationen__c.field-meta.xml
<CustomField>
    <fullName>Betreiberinformationen__c</fullName>
    <label>Betreiberinformationen</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>