force-app/main/default/objects/Property__c/fields/Betriebskostenvorauszahlung__c.field-meta.xml
<CustomField>
    <fullName>Betriebskostenvorauszahlung__c</fullName>
    <label>Betriebskostenvorauszahlung</label>
    <length>255</length>
    <type>Text</type>
</CustomField>