force-app/main/default/objects/Property__c/fields/BetrWohnenMieteProMMonat__c.field-meta.xml
<CustomField>
    <fullName>BetrWohnenMieteProMMonat__c</fullName>
    <label>Betr. Wohnen (Miete pro m²/Monat)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>