force-app/main/default/objects/Property__c/fields/Beurkundbar_ab__c.field-meta.xml
<CustomField>
    <fullName>Beurkundbar_ab__c</fullName>
    <label>Vertriebsstart</label>
    <type>Date</type>
</CustomField>