force-app/main/default/objects/Property__c/fields/BeurkundungAnkauf__c.field-meta.xml
<CustomField>
    <fullName>BeurkundungAnkauf__c</fullName>
    <label>Beurkundung Ankauf</label>
    <type>Date</type>
</CustomField>