force-app/main/default/objects/Property__c/fields/Beurkundungsstart__c.field-meta.xml
<CustomField>
    <fullName>Beurkundungsstart__c</fullName>
    <label>Beurkundungsstart</label>
    <type>Date</type>
</CustomField>