force-app/main/default/objects/Property__c/fields/Bezahlt__c.field-meta.xml
<CustomField>
    <fullName>Bezahlt__c</fullName>
    <label>Bezahlt (aus Teilobjekt)</label>
    <summarizedField>Appartment__c.Bezahlt__c</summarizedField>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>