force-app/main/default/objects/Property__c/fields/BezahlterBetrag__c.field-meta.xml
<CustomField>
    <fullName>BezahlterBetrag__c</fullName>
    <formula>AbgerechneterBetrag__c  - OffenerBetragGesamt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bezahlter Betrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>