force-app/main/default/objects/Property__c/fields/Bezahlung__c.field-meta.xml
<CustomField>
    <fullName>Bezahlung__c</fullName>
    <label>Bezahlung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endfällige Bezahlung</fullName>
            </value>
            <value>
                <fullName>Bezahlung nach Baufortschritt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>