force-app/main/default/objects/Property__c/fields/Bezahlung_nach_MaBV__c.field-meta.xml
<CustomField>
    <fullName>Bezahlung_nach_MaBV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ist dieses Feld angehakt, werden die externen Provisionen für die Verkaufschance erst dann generiert, wenn die 1. MaBV Rate gezahlt wurde</description>
    <inlineHelpText>Ist dieses Feld angehakt, werden die externen Provisionen für die Verkaufschance erst dann generiert, wenn die 1. MaBV Rate gezahlt wurde</inlineHelpText>
    <label>PV - 1. MaBV Rate</label>
    <type>Checkbox</type>
</CustomField>