force-app/main/default/objects/Property__c/fields/Bezugsfertig__c.field-meta.xml
<CustomField>
    <fullName>Bezugsfertig__c</fullName>
    <label>Bezugsfertig</label>
    <type>Date</type>
</CustomField>