force-app/main/default/objects/Property__c/fields/BilledNotPaid__c.field-meta.xml
<CustomField>
    <fullName>BilledNotPaid__c</fullName>
    <label>Abgerechnet, nicht Bezahlt (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>