force-app/main/default/objects/Property__c/fields/Bruttogrundflaeche__c.field-meta.xml
<CustomField>
    <fullName>Bruttogrundflaeche__c</fullName>
    <label>BGF (qm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>