force-app/main/default/objects/Property__c/fields/Builders__c.field-meta.xml
<CustomField>
    <fullName>Builders__c</fullName>
    <label>Builders</label>
    <length>45</length>
    <type>Text</type>
</CustomField>