force-app/main/default/objects/Property__c/fields/Building_Name_Del__c.field-meta.xml
<CustomField>
    <fullName>Building_Name_Del__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <label>Building Name Del</label>
    <length>30</length>
    <type>Text</type>
</CustomField>