force-app/main/default/objects/Property__c/fields/Building_Share_Value__c.field-meta.xml
<CustomField>
    <fullName>Building_Share_Value__c</fullName>
    <defaultValue>0.93</defaultValue>
    <label>Building Share Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>