force-app/main/default/objects/Property__c/fields/BuildingProgressWebcam__c.field-meta.xml
<CustomField>
    <fullName>BuildingProgressWebcam__c</fullName>
    <label>Baufortschritt Webcam</label>
    <type>Url</type>
</CustomField>