force-app/main/default/objects/Property__c/fields/CapexMassnahmen__c.field-meta.xml
<CustomField>
    <fullName>CapexMassnahmen__c</fullName>
    <label>Capex-Maßnahmen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>