force-app/main/default/objects/Property__c/fields/CheckDemand__c.field-meta.xml
<CustomField>
    <fullName>CheckDemand__c</fullName>
    <label>Prüfung Bedarf</label>
    <type>Date</type>
</CustomField>