force-app/main/default/objects/Property__c/fields/CheckEconomicEfficiency__c.field-meta.xml
<CustomField>
    <fullName>CheckEconomicEfficiency__c</fullName>
    <label>Prüfung Wirtschaftlichkeit</label>
    <type>Date</type>
</CustomField>