force-app/main/default/objects/Property__c/fields/ClosingBonusAb__c.field-meta.xml
<CustomField>
    <fullName>ClosingBonusAb__c</fullName>
    <label>Closing Bonus ab</label>
    <type>Date</type>
</CustomField>