force-app/main/default/objects/Property__c/fields/ClosingBonusInPercent__c.field-meta.xml
<CustomField>
    <fullName>ClosingBonusInPercent__c</fullName>
    <label>Closing Bonus in %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>