force-app/main/default/objects/Property__c/fields/Collection_Id_Hyposerv__c.field-meta.xml
<CustomField>
    <fullName>Collection_Id_Hyposerv__c</fullName>
    <label>Collection Id Hyposerv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>