force-app/main/default/objects/Property__c/fields/Construction__c.field-meta.xml
<CustomField>
    <fullName>Construction__c</fullName>
    <label>Construction</label>
    <type>Date</type>
</CustomField>