force-app/main/default/objects/Property__c/fields/CurrentRateDateFirstInvoice__c.field-meta.xml
<CustomField>
    <fullName>CurrentRateDateFirstInvoice__c</fullName>
    <formula>AktuelleMaBVRateLookup__r.DateFirstInvoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aktuelle Rate Datum erste Rechnung</label>
    <type>Date</type>
</CustomField>