force-app/main/default/objects/Property__c/fields/CurrentRateDateLastInvoice__c.field-meta.xml
<CustomField>
    <fullName>CurrentRateDateLastInvoice__c</fullName>
    <formula>AktuelleMaBVRateLookup__r.DateLastInvoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aktuelle Rate Datum letzte Rechnung</label>
    <type>Date</type>
</CustomField>