force-app/main/default/objects/Property__c/fields/Data_Of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Data_Of_Purchase__c</fullName>
    <label>Data Of Purchase</label>
    <type>Date</type>
</CustomField>