force-app/main/default/objects/Property__c/fields/DateConditionPrecedentRightOfWithdrawal__c.field-meta.xml
<CustomField>
    <fullName>DateConditionPrecedentRightOfWithdrawal__c</fullName>
    <label>Termin Aufsch. Bedingung/Rücktrittsrecht</label>
    <type>Date</type>
</CustomField>