force-app/main/default/objects/Property__c/fields/Datum1MaBVRate__c.field-meta.xml
<CustomField>
    <fullName>Datum1MaBVRate__c</fullName>
    <description>Wann muss die erste MaBV Rate gezahlt sein?</description>
    <inlineHelpText>Wann muss die erste MaBV Rate gezahlt sein?</inlineHelpText>
    <label>Datum 1. MaBV Rate</label>
    <type>Date</type>
</CustomField>