force-app/main/default/objects/Property__c/fields/Datum2MaBVRate__c.field-meta.xml
<CustomField>
    <fullName>Datum2MaBVRate__c</fullName>
    <description>Wann muss die zweite MaBV Rate gezahlt sein?</description>
    <inlineHelpText>Wann muss die zweite MaBV Rate gezahlt sein?</inlineHelpText>
    <label>Datum 2. MaBV Rate</label>
    <type>Date</type>
</CustomField>