force-app/main/default/objects/Property__c/fields/Datum3MaBVRate__c.field-meta.xml
<CustomField>
    <fullName>Datum3MaBVRate__c</fullName>
    <description>Wann muss die dritte MaBV Rate gezahlt sein?</description>
    <inlineHelpText>Wann muss die dritte MaBV Rate gezahlt sein?</inlineHelpText>
    <label>Datum 3. MaBV Rate</label>
    <type>Date</type>
</CustomField>