force-app/main/default/objects/Property__c/fields/Datum5MaBV_Rate__c.field-meta.xml
<CustomField>
    <fullName>Datum5MaBV_Rate__c</fullName>
    <description>Wann muss die fünfte MaBV Rate gezahlt sein?</description>
    <inlineHelpText>Wann muss die fünfte MaBV Rate gezahlt sein?</inlineHelpText>
    <label>Datum 5. MaBV Rate</label>
    <type>Date</type>
</CustomField>