force-app/main/default/objects/Property__c/fields/DatumErsteReservierung__c.field-meta.xml
<CustomField>
    <fullName>DatumErsteReservierung__c</fullName>
    <label>Datum erste Reservierung</label>
    <type>Date</type>
</CustomField>