force-app/main/default/objects/Property__c/fields/Denkmal__c.field-meta.xml
<CustomField>
    <fullName>Denkmal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Denkmal</label>
    <type>Checkbox</type>
</CustomField>